fix: add expert mode

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 <body>
 
-    <h1>Whack-a-mole! <span class="score">0</span></h1>
+    <h1>Whack-a-mole!<span class="score">0</span>
+    <span class="highScoreBoard"></span></h1>
     <div class='buttons'>
     <button class="btn" onClick="startGame()">Start!</button>
     <button class="btn" onClick="startGameExpert()">Expert Mode</button>
+    
     </div>
 
     <div class="game">
